<resources>
    <string name="app_name">Barcode Generator</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_barcode_enter">Auto Enter</string>
    <string name="title_camera">Legacy</string>
    <string name="title_barcodes">Barcodes</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="clear_all">Clear All</string>

    <string name="instruction_title">How to Use</string>
    <string name="instruction_1">Press START SCAN and navigate</string>
    <string name="instruction_2">to page to be scanned</string>
    <string name="instruction_3">When done, return to app</string>
    <string name="instruction_4">and press STOP SCAN</string>
    <string name="instruction_5">Legacy Mode utilizes the camera</string>
    <string name="instruction_6">instead of screen scanner</string>
    <string name="instruction_7">Captured files are found </string>
    <string name="instruction_8">in BARCODES tab</string>

    <string name="notification_title_tap_to_open">Tap to open Barcode Generator.</string>
    <string name="notification_title_barcode_stopped">Barcode Generator stopped</string>
    <string name="settings_page_title">Settings</string>
    <string name="main_start">Start</string>

    <string name="channel_name">notifications</string>
    <string name="channel_description">notification description</string>



</resources>